<resources>
    <string name="app_name">EarthquakeApp</string>

    <string-array name="countries" formatted="false" translatable="false">
        <item>South Sandwich Island Region</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Alaska</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Canary Islands</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Ceuta and Melilla</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo [DRC]</item>
        <item>Congo [Republic]</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Curaçao</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Côte d’Ivoire</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Europe</item>
        <item>Faroe Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guernsey</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Isle of Man</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jersey</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latin America</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Macedonia [FYROM]</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar [Burma]</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Northern Mariana Islands</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Palestine</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Réunion</item>
        <item>Saint Barthélemy</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Martin</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Sint Maarten</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>São Tomé and Príncipe</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turks and Caicos Islands</item>
        <item>U.S. Outlying Islands</item>
        <item>U.S. Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>Åland Islands</item>
    </string-array>


    <string name="_edt_countries_hint">Type Country Name</string>
    <string name="_txt_no_data_found">NO DATA FOUND</string>
    <string name="_lbl_select_country">Select the country to get Earthquake details:</string>
    <string name="_lbl_country">Country:</string>
    <string name="_lbl_region">Region:</string>
    <string name="_lbl_src">src</string>
    <string name="_lbl_equid">equid</string>
    <string name="_lbl_lat">latitude</string>
    <string name="_lbl_lng">longitude</string>
    <string name="_lbl_magnitude">magnitude</string>
    <string name="_lbl_depth">depth</string>
    <string name="_lbl_timedate">date and time</string>
    <string name="_txt_list_title">Click on list Item to get details data</string>
    <string name="_lbl_total_count">Total number of earthquakes in the region: </string>




</resources>
