<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.earthquakeapp.views.EarthquakeDetailsDataActivity">

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_lbl_country"
        android:textSize="@dimen/_txt_heading"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_lbl_region"
        android:textSize="@dimen/_txt_heading"
        android:textStyle="bold"
        android:layout_below="@id/tv_country"/>

    <TextView
        android:id="@+id/tv_total_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_lbl_total_count"
        android:textSize="@dimen/_txt_normal"
        android:layout_below="@id/tv_region"/>
    <LinearLayout
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOrange"
        android:layout_below="@+id/tv_total_count"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:text="@string/_lbl_src"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:text = "@string/_lbl_equid"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:padding="@dimen/_table_data_padding"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />

        <TextView
            android:text="@string/_lbl_lat"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:padding="@dimen/_table_data_padding"
            android:textColor="@color/colorWhite" />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <TextView
            android:text="@string/_lbl_lng"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:padding="@dimen/_table_data_padding"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />

        <TextView
            android:text="@string/_lbl_magnitude"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:padding="@dimen/_table_data_padding"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:text="@string/_lbl_depth"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:padding="@dimen/_table_data_padding"
            android:textColor="@color/colorWhite"
            />
        <TextView
            android:text=""
            android:layout_width="@dimen/_separator_line"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:text="@string/_lbl_timedate"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:padding="@dimen/_table_data_padding"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/horizontal_line"
        android:text=""
        android:layout_width="match_parent"
        android:padding="@dimen/_table_data_padding"
        android:layout_height="2dp"
        android:background="@color/colorWhite"
        android:layout_below="@+id/title_text"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/horizontal_line" />
</RelativeLayout>
